--- a/style.css
+++ b/style.css
@@ -1,279 +1,617 @@
 /* css Zen Garden default style v1.02 */
 /* css released under Creative Commons License - http://creativecommons.org/licenses/by-nc-sa/1.0/  */
-
 /* This file based on 'Tranquille' by Dave Shea */
 /* You may use this file as a foundation for any new work, but you may find it easier to start from scratch. */
 /* Not all elements are defined in this file, so you'll most likely want to refer to the xhtml as well. */
-
 /* Your images should be linked as if the CSS file sits in the same folder as the images. ie. no paths. */
-@import 'style-guide.css';
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section, main {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* -------------------------------- 
+
+xBackground 
+
+-------------------------------- */
+body {
+  /* this is the page background */
+  background-color: #f8f7ff;
+}
+
+/* -------------------------------- 
+
+xPatterns
+
+-------------------------------- */
+.cd-box {
+  /* this is the container of various design elements - i.e. the 2 logo of the branding section */
+  border: 1px solid #00b4d8;
+  border-radius: 3px;
+  background: #f8f7ff;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+  padding: 6px;
+}
+
+/* -------------------------------- 
+
+xNavigation 
+
+-------------------------------- */
+header {
+  background-color: #40916c;
+}
+
+.cd-logo {
+  /* logo box style */
+  background-color: black;
+  width: 120px;
+}
+@media only screen and (min-width: 1024px) {
+  .cd-logo {
+    width: 180px;
+  }
+}
+
+.cd-main-nav {
+  /* main navigation background color - full screen on small devices */
+  background: #40916c;
+}
+.cd-main-nav li a {
+  color: #f8f7ff;
+  border-color: #48a379;
+}
+@media only screen and (min-width: 1024px) {
+  .cd-main-nav li a {
+    color: #bce1d0;
+  }
+  .cd-main-nav li a.selected {
+    color: #f8f7ff;
+    box-shadow: 0 2px 0 black;
+  }
+  .cd-main-nav li a:hover {
+    color: #f8f7ff;
+  }
+}
+
+.cd-nav-trigger span {
+  /* hamburger menu */
+  background-color: #f8f7ff;
+}
+.cd-nav-trigger span::before, .cd-nav-trigger span::after {
+  /* upper and lower lines */
+  background-color: #f8f7ff;
+}
+
+.nav-is-visible .cd-nav-trigger span {
+  /* hide line in the center on mobile when nav is visible */
+  background-color: rgba(248, 247, 255, 0);
+}
+.nav-is-visible .cd-nav-trigger span::before, .nav-is-visible .cd-nav-trigger span::after {
+  /* preserve visibility of upper and lower lines - close icon */
+  background-color: #f8f7ff;
+}
+
+.cd-download {
+  /* download button top-right visible on big devices */
+  background-color: #52b286;
+}
+.no-touch .cd-download:hover {
+  background-color: #63ba93;
+}
+.cd-download span {
+  /* tooltip */
+  background: black;
+  color: #f8f7ff;
+}
+.cd-download span::before {
+  /* right arrow color */
+  border-color: black;
+}
+
+.cd-primary-nav,
+.cd-secondary-nav {
+  max-width: 150px;
+  background-color: #6fce72;
+  text-decoration: underline;
+}
+.cd-primary-nav li,
+.cd-secondary-nav li {
+  display: block;
+  padding: 10px 20px;
+  text-align: left;
+}
+.cd-primary-nav li:hover,
+.cd-secondary-nav li:hover {
+  background-color: #37a03a;
+  cursor: pointer;
+  color: white;
+  text-shadow: 3px 3px 5px black;
+}
+
+.cd-footer-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  list-style-type: none;
+  max-width: 400px;
+  text-align: center;
+  text-decoration: underline;
+  background-color: #ffe66d;
+}
+.cd-footer-nav li {
+  display: inline;
+}
+.cd-footer-nav li a {
+  display: block;
+  padding: 10px 20px;
+}
+
+/* -------------------------------- 
+
+xPage title 
+
+-------------------------------- */
+main > h1 {
+  color: #40916c;
+}
+@media only screen and (min-width: 1600px) {
+  main > h1 {
+    /* title goes into the header on big devices */
+    color: #f8f7ff;
+  }
+}
+
+/* -------------------------------- 
+
+xTypography 
+
+-------------------------------- */
+h1,
+h2 {
+  font-family: "Courgette", cursive;
+  color: #40916c;
+}
+
+h1 {
+  font-size: 2.4rem;
+  font-weight: 300;
+  line-height: 1.2;
+  margin: 0 0 0.4em;
+}
+@media only screen and (min-width: 768px) {
+  h1 {
+    font-size: 3.2rem;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  h1 {
+    font-size: 4rem;
+  }
+}
+
+h2 {
+  font-weight: bold;
+  text-transform: uppercase;
+  margin: 1em 0;
+}
+@media only screen and (min-width: 768px) {
+  h2 {
+    font-size: 1.8rem;
+    margin: 1em 0 1.4em;
+  }
+}
+
+section > h2::before {
+  /* number before each section title */
+  color: #00748c;
+}
+
+p {
+  font-size: 1.4rem;
+  line-height: 1.4;
+  color: #87caab;
+}
+p a {
+  color: black;
+  text-decoration: underline;
+}
+@media only screen and (min-width: 768px) {
+  p {
+    font-size: 1.6rem;
+    line-height: 1.6;
+  }
+}
+
+/* -------------------------------- 
+
+xButtons 
+
+-------------------------------- */
+.btn {
+  border: none;
+  box-shadow: none;
+  border-radius: 0.25em;
+  font-size: 1.4rem;
+  font-family: "Courgette", cursive;
+  color: #f8f7ff;
+  padding: 0.6em 2.2em;
+  cursor: pointer;
+  background: black;
+}
+.btn:focus {
+  outline: none;
+}
+.no-touch .btn:hover {
+  background: #0d0d0d;
+}
+.btn.btn-success {
+  background: #6fce72;
+}
+.no-touch .btn.btn-success:hover {
+  background: #82d485;
+}
+.btn.btn-alert {
+  background: #ff9f1c;
+}
+.no-touch .btn.btn-alert:hover {
+  background: #ffaa36;
+}
+.btn.btn-outline {
+  color: black;
+  background: transparent;
+  box-shadow: inset 0 0 0 1px black;
+}
+.no-touch .btn.btn-outline:hover {
+  color: #f8f7ff;
+  background: black;
+}
+@media only screen and (min-width: 768px) {
+  .btn {
+    font-size: 1.6rem;
+  }
+}
+
+.cd-buttons .cd-box:nth-of-type(2) span {
+  /* CSS class name color */
+  color: black;
+}
+
+/*@import 'partials/basic-style';*/
+.intro div, .participation {
+  background-color: #ffe66d;
+  padding-right: 20px;
+}
+
+.benefits, .requirements p:last-of-type, footer {
+  background-color: #40916c;
+}
+
+.benefits h3, .benefits p {
+  color: white;
+}
+
+.benefits {
+  color: white;
+  padding: 20px;
+}
+
+.requirements p:last-of-type, footer {
+  padding: 40px;
+  font-size: 2em;
+}
 
 /* basic elements */
 html {
-	margin: 0;
-	padding: 0;
-	}
-body { 
-	font: 75% georgia, sans-serif;
-	line-height: 1.88889;
-	color: #555753; 
-	margin: 0; 
-	padding: 0;
-	}
-p { 
-	margin-top: 0; 
-	text-align: justify;
-	}
-h3 { 
-	font: italic normal 1.4em georgia, sans-serif;
-	letter-spacing: 1px; 
-	margin-bottom: 0; 
-	color: #7D775C;
-	}
-a:link { 
-	font-weight: bold; 
-	text-decoration: none; 
-	color: #B7A5DF;
-	}
-a:visited { 
-	font-weight: bold; 
-	text-decoration: none; 
-	color: #D4CDDC;
-	}
-a:hover, a:focus, a:active { 
-	text-decoration: underline; 
-	color: #9685BA;
-	}
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font: 75% georgia, sans-serif;
+  line-height: 1.88889;
+  color: #555753;
+  margin: 0;
+  padding: 0;
+}
+
+p {
+  margin-top: 0;
+  text-align: justify;
+}
+
+h3 {
+  font: italic normal 1.4em georgia, sans-serif;
+  letter-spacing: 1px;
+  margin-bottom: 0;
+  color: #7D775C;
+}
+
+a:link {
+  font-weight: bold;
+  text-decoration: none;
+  color: #B7A5DF;
+}
+
+a:visited {
+  font-weight: bold;
+  text-decoration: none;
+  color: #D4CDDC;
+}
+
+a:hover, a:focus, a:active {
+  text-decoration: underline;
+  color: #9685BA;
+}
+
 abbr {
-	border-bottom: none;
-	}
+  border-bottom: none;
+}
 
 /* specific divs */
-.page-wrapper { 
-	padding: 10px; 
-	margin: 0; 
-	position: relative;
-	}
-
-	.page-wrapper section{ 
-		padding:20px;
-	}
-
-	.page-wrapper div{ 
-		padding:20px;
-	}
-
-.intro { 
-	width: 100%;
-	}
-
-.intro > header:nth-child(1){
-	background: url(CSS_Outline.svg) no-repeat;
-	background-size: cover;
-	max-width: 100%;
-	padding-top: 0;
-	padding-bottom: 50%;
+.page-wrapper {
+  padding: 10px;
+  margin: 0;
+  position: relative;
 }
-	
 
-header h1 { 
-	font-size: 2em;
-	padding-left: 10%;
-	padding-top: 180px;
-	}
+.page-wrapper section {
+  padding: 20px;
+}
+
+.page-wrapper div {
+  padding: 20px;
+}
+
+.intro {
+  width: 100%;
+}
+
+.intro > header:nth-child(1) {
+  background: url(CSS_Outline.svg) no-repeat;
+  background-size: cover;
+  max-width: 100%;
+  padding-top: 0;
+  padding-bottom: 50%;
+}
+
+header h1 {
+  font-size: 2em;
+  padding-left: 10%;
+  padding-top: 180px;
+}
+
 header h2 {
-	font-size: 1em;
-	padding-left: 10%;
-	padding-bottom: 35%;
-	}
-header {
-	padding-top: 20px;
-	height: 87px;
+  font-size: 1em;
+  padding-left: 10%;
+  padding-bottom: 35%;
 }
 
-.summary { 
-	margin: 20px 20px 20px 10px; 
-	}
+header {
+  padding-top: 20px;
+  height: 87px;
+}
+
+.summary {
+  margin: 20px 20px 20px 10px;
+}
+
 .summary p {
-	font: italic 1.1em/2.2 georgia; 
-	text-align: center;
-	}
+  font: italic 1.1em/2.2 georgia;
+  text-align: center;
+}
 
 .preamble {
-	clear: right; 
-	padding: 0px 10px 0 10px;
-	}
-.supporting {	
-	padding-left: 10px; 
-	margin-bottom: 40px;
-	}
+  clear: right;
+  padding: 0px 10px 0 10px;
+}
 
-footer { 
-	text-align: center; 
-	}
-footer a:link, footer a:visited { 
-	margin-right: 20px; 
-	}
+.supporting {
+  padding-left: 10px;
+  margin-bottom: 40px;
+}
+
+footer {
+  text-align: center;
+}
+
+footer a:link, footer a:visited {
+  margin-right: 20px;
+}
 
 .sidebar {
-	position: absolute; 
-	top: 0;
-	right: 0;
-	
-	}
-	
-	
+  position: absolute;
+  top: 0;
+  right: 0;
+}
 
-.sidebar .wrapper { 
-	display: flex;
-		flex-direction: column;
-	font: 10px verdana, sans-serif; 
-	
-	padding: 10px; 
-	
-	}
+.sidebar .wrapper {
+  display: flex;
+  flex-direction: column;
+  font: 10px verdana, sans-serif;
+  padding: 10px;
+}
 
-	
+.sidebar .wrapper div {
+  position: absolute;
+  background-color: none;
+  right: 0;
+  display: flex;
+  flex-direction: row;
+  margin: 10px 10% 10px;
+  justify-content: space-between;
+  width: 330px;
+  transition: 3s 0.2s;
+}
 
-		.sidebar .wrapper div{ 
-			position: absolute; 
-			background-color: none;
-	right: 0;
-			display: flex;
-			flex-direction: row;
-			margin: 10px 10% 10px;
-			justify-content: space-between;
-			width: 330px; 
-			
-			transition: 3s 0.2s;
-			}
+.sidebar .wrapper div:nth-child(1) {
+  top: 0;
+  margin-right: -250px;
+  width: 380px;
+}
 
-			
+.sidebar .wrapper div:nth-child(2) {
+  top: 0;
+  margin-top: 250px;
+  margin-right: -130px;
+  width: 230px;
+}
 
-			.sidebar .wrapper div:nth-child(1){ 
-				top: 0;
-				
-				margin-right: -250px;
-				width: 380px; 
-				}
+.sidebar .wrapper div:nth-child(3) {
+  top: 0;
+  margin-top: 350px;
+  margin-right: -160px;
+  width: 230px;
+}
 
-				
-			.sidebar .wrapper div:nth-child(2){ 
-				top: 0;
-				margin-top: 250px;
-				margin-right: -130px;
-				width: 230px; 
-				}
+.summary {
+  margin-top: 200px;
+}
 
-			.sidebar .wrapper div:nth-child(3){ 
-				top: 0;
-				margin-top: 350px;
-				margin-right: -160px;
-				width: 230px; 
-				}
+.sidebar .wrapper div:hover {
+  background-color: black;
+  margin-right: 50px;
+}
 
-				.summary{
-				margin-top: 200px;
-				}
+.sidebar .wrapper div nav {
+  background: transparent url(http://csszengarden.com/001/paper-bg.jpg) top left repeat-y;
+}
 
-				.sidebar .wrapper div:hover{
-					background-color: black;
-					margin-right: 50px;
-				}
-				
+.sidebar .wrapper div ul {
+  background: transparent url(http://csszengarden.com/001/paper-bg.jpg) top left repeat-y;
+}
 
-			.sidebar .wrapper div nav{ 
-				
-				background: transparent url(http://csszengarden.com/001/paper-bg.jpg) top left repeat-y; 
-				}
+.sidebar h3.select {
+  background: transparent url(http://csszengarden.com/001/h3.gif) no-repeat top left;
+  margin: 10px 0 5px 0;
+  width: 97px;
+  height: 16px;
+  text-indent: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+}
 
-				.sidebar .wrapper div ul{ 
-				
-					background: transparent url(http://csszengarden.com/001/paper-bg.jpg) top left repeat-y; 
-					}
+.sidebar h3.archives {
+  background: transparent url(http://csszengarden.com/001/h5.gif) no-repeat top left;
+  margin: 25px 0 5px 0;
+  width: 57px;
+  height: 14px;
+  text-indent: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+}
 
-			
-.sidebar h3.select { 
-	background: transparent url(http://csszengarden.com/001/h3.gif) no-repeat top left; 
-	margin: 10px 0 5px 0; 
-	width: 97px; 
-	height: 16px; 
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-.sidebar h3.archives { 
-	background: transparent url(http://csszengarden.com/001/h5.gif) no-repeat top left; 
-	margin: 25px 0 5px 0; 
-	width:57px; 
-	height: 14px; 
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-.sidebar h3.resources { 
-	background: transparent url(http://csszengarden.com/001/h6.gif) no-repeat top left; 
-	margin: 25px 0 5px 0; 
-	width:63px; 
-	height: 10px; 
-
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-	}
-
+.sidebar h3.resources {
+  background: transparent url(http://csszengarden.com/001/h6.gif) no-repeat top left;
+  margin: 25px 0 5px 0;
+  width: 63px;
+  height: 10px;
+  text-indent: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+}
 
 .sidebar ul {
-	margin: 0;
-	padding: 0;
-	}
+  margin: 0;
+  padding: 0;
+}
+
 .sidebar li {
-	line-height: 1.3em; 
-	background: transparent url(http://csszengarden.com/001/cr1.gif) no-repeat top center; 
-	display: block; 
-	padding-top: 5px; 
-	margin-bottom: 5px;
-	list-style-type: none;
-	}
+  line-height: 1.3em;
+  background: transparent url(http://csszengarden.com/001/cr1.gif) no-repeat top center;
+  display: block;
+  padding-top: 5px;
+  margin-bottom: 5px;
+  list-style-type: none;
+}
+
 .sidebar li a:link {
-	color: #988F5E;
-	}
+  color: #988F5E;
+}
+
 .sidebar li a:visited {
-	color: #B3AE94;
-	}
+  color: #B3AE94;
+}
 
-
-.extra1 {
+/*.extra1 {
 	/*background: transparent url(http://csszengarden.com/001/cr2.gif) top left no-repeat; */
-	position: absolute; 
-	top: 40px; 
-	right: 0; 
-	width: 148px; 
-	height: 110px;
-	}
+/*position: absolute; 
+top: 40px; 
+right: 0; 
+width: 148px; 
+height: 110px;
+}*/
+@media (min-width: 400px) {
+  header h1 {
+    padding-top: 0;
+  }
+}
+@media (min-width: 800px) {
+  header h1 {
+    font-size: 3em;
+    padding-left: 20%;
+    padding-top: 0;
+  }
 
-	@media (min-width:400px) {
-		header h1 { 
-			padding-top: 0;
-			}
-		
-	}
+  header h2 {
+    font-size: 2em;
+    padding-left: 20%;
+    padding-bottom: 35%;
+  }
 
-	@media (min-width:800px) {
-		header h1 { 
-			font-size: 3em;
-			padding-left: 20%;
-			padding-top: 0;
-			}
-		header h2 {
-			font-size: 2em;
-			padding-left: 20%;
-			padding-bottom: 35%;
-			}
-		.sidebar .wrapper div{ 
-			position: absolute; 
-			background-color: green;
-		}
-	}
+  .sidebar .wrapper div {
+    position: absolute;
+    background-color: green;
+  }
+}
+
+/*# sourceMappingURL=style.css.map */
