--- a/style.css
+++ b/style.css
@@ -327,22 +327,33 @@ xButtons
 }
 
 /*@import 'partials/basic-style';*/
-.intro div, .participation {
+.intro div {
   background-color: #ffe66d;
   padding-right: 20px;
 }
 
-.benefits, .requirements p:last-of-type, footer {
+.participation {
   background-color: #40916c;
 }
 
-.benefits h3, .benefits p {
-  color: white;
+.requirements p:last-of-type, footer {
+  background-color: #40916c;
 }
 
 .benefits {
+  background-color: #ffe66d;
+}
+
+/*.benefits h3, .benefits p{
+    color: white;
+}*/
+.benefits {
   color: white;
   padding: 20px;
+}
+
+.preamble h3, .benefits h3 {
+  color: black;
 }
 
 .requirements p:last-of-type, footer {
@@ -373,7 +384,7 @@ h3 {
   font: italic normal 1.4em georgia, sans-serif;
   letter-spacing: 1px;
   margin-bottom: 0;
-  color: #7D775C;
+  color: #f8f7ff;
   text-decoration: underline dotted;
 }
 
@@ -409,13 +420,9 @@ abbr {
   padding: 20px;
 }
 
-.page-wrapper div {
-  padding: 20px;
-}
-
-/*.intro { 
-	width: 100%;
-	}*/
+/*.page-wrapper div{ 
+	padding:20px;
+}	*/
 .intro > header:nth-child(1) {
   background: url(CSS_Outline.svg) no-repeat;
   background-size: cover;
@@ -441,8 +448,22 @@ header {
   height: 87px;
 }
 
+.summary, .preamble, .supporting, .explanation, .participation, .requirements p {
+  padding: 1em;
+}
+
+.explanation h3 {
+  color: #40916c;
+}
+
+.requirements p:last-of-type {
+  padding: 0;
+  font-size: 1.5em;
+  text-align: center;
+}
+
 .summary {
-  margin: 20px 20px 20px 10px;
+  margin-top: 2.5em;
 }
 
 .summary p {
@@ -452,11 +473,9 @@ header {
 
 .preamble {
   clear: right;
-  padding: 0px 10px 0 10px;
 }
 
 .supporting {
-  padding-left: 10px;
   margin-bottom: 40px;
 }
 
@@ -591,7 +610,7 @@ height: 110px;
 }*/
 @media (max-width: 330px) {
   .summary {
-    max-width: 45%;
+    max-width: 40%;
   }
 }
 @media (max-width: 650px) {
@@ -604,8 +623,12 @@ height: 110px;
     font-size: 3.5em;
     padding-top: 0;
   }
+
+  .summary {
+    margin-top: 0;
+  }
 }
-@media (min-width: 800px) {
+@media (min-width: 850px) {
   header h1 {
     font-size: 5em;
     padding-left: 20%;
@@ -623,7 +646,7 @@ height: 110px;
     background-color: green;
   }
 }
-@media (min-width: 1000px) {
+@media (min-width: 1100px) {
   header h1 {
     font-size: 10em;
   }
