--- a/style.scss
+++ b/style.scss
@@ -76,14 +76,14 @@ body {
 	}
 p { 
 	margin-top: 0; 
+	margin-bottom: 0;
 	text-align: justify;
 	}
 h3 { 
 	font: italic normal 1.4em georgia, sans-serif;
 	letter-spacing: 1px; 
 	margin-bottom: 0; 
-	//color: #7D775C;
-	color: $color-5;
+	color: #7D775C;	
 	text-decoration: underline dotted;
 	}
 a:link { 
@@ -154,7 +154,6 @@ header {
 }
 
 .requirements p:last-of-type{
-	padding: 0;
 	font-size: 1.5em;
 	text-align: center;
 }
@@ -207,14 +206,23 @@ footer a:link, footer a:visited {
 		.sidebar .wrapper div{ 
 			position: absolute; 
 			background-color: none;
-	right: 0;
+			right: 0;
 			display: flex;
 			flex-direction: row;
 			margin: 10px 10% 10px;
 			justify-content: space-between;
 			width: 330px; 
-			
+			padding: 1em;
 			transition: 3s 0.2s;
+			h3{
+					color: #7D775C;
+					transition: 3s 0.2s;
+				}
+
+				a:link { 
+					font-size: 1em;
+					transition: 3s 0.2s;
+					}
 			}
 
 			
@@ -223,7 +231,8 @@ footer a:link, footer a:visited {
 				top: 0;
 				
 				margin-right: -250px;
-				width: 380px; 
+				width: 380px;
+				
 				}
 
 				
@@ -231,14 +240,15 @@ footer a:link, footer a:visited {
 				top: 0;
 				margin-top: 250px;
 				margin-right: -130px;
-				width: 230px; 
+				width: 230px; 	
 				}
 
 			.sidebar .wrapper div:nth-child(3){ 
 				top: 0;
 				margin-top: 350px;
-				margin-right: -160px;
-				width: 230px; 
+				margin-right: -140px;
+				width: 240px; 
+				
 				}
 
 				/*.summary{
@@ -247,50 +257,57 @@ footer a:link, footer a:visited {
 
 				.sidebar .wrapper div:hover{
 					background-color: black;
-					margin-right: 50px;
+					margin-right: 10px;
+					h3{
+						color: $color-5;
+					}
+
+					a:link { 
+						font-size: 1.3em;
+						}
 				}
 				
 
 			.sidebar .wrapper div nav{ 
 				
-				background: transparent url(http://csszengarden.com/001/paper-bg.jpg) top left repeat-y; 
+				//background: transparent url(http://csszengarden.com/001/paper-bg.jpg) top left repeat-y; 
 				}
 
 				.sidebar .wrapper div ul{ 
 				
-					background: transparent url(http://csszengarden.com/001/paper-bg.jpg) top left repeat-y; 
+					//background: transparent url(http://csszengarden.com/001/paper-bg.jpg) top left repeat-y; 
 					}
 
 			
 .sidebar h3.select { 
-	background: transparent url(http://csszengarden.com/001/h3.gif) no-repeat top left; 
+	//background: transparent url(http://csszengarden.com/001/h3.gif) no-repeat top left; 
 	margin: 10px 0 5px 0; 
-	width: 97px; 
+	//width: 97px; 
 	height: 16px; 
 
-	text-indent: 100%;
+	//text-indent: 100%;
 	white-space: nowrap;
 	overflow: hidden;
 	//text-decoration: underline dotted;
 	}
 .sidebar h3.archives { 
-	background: transparent url(http://csszengarden.com/001/h5.gif) no-repeat top left; 
+	//background: transparent url(http://csszengarden.com/001/h5.gif) no-repeat top left; 
 	margin: 25px 0 5px 0; 
-	width:57px; 
+	//width:57px; 
 	height: 14px; 
 
-	text-indent: 100%;
+	//text-indent: 100%;
 	white-space: nowrap;
 	overflow: hidden;
 	//text-decoration: underline dotted;
 	}
 .sidebar h3.resources { 
-	background: transparent url(http://csszengarden.com/001/h6.gif) no-repeat top left; 
+	//background: transparent url(http://csszengarden.com/001/h6.gif) no-repeat top left; 
 	margin: 25px 0 5px 0; 
-	width:63px; 
-	height: 10px; 
+	//width:63px; 
+	//height: 10px; 
 
-	text-indent: 100%;
+	//text-indent: 100%;
 	white-space: nowrap;
 	overflow: hidden;
 	//text-decoration: underline dotted;
@@ -308,13 +325,35 @@ footer a:link, footer a:visited {
 	padding-top: 5px; 
 	margin-bottom: 5px;
 	list-style-type: none;
+	color: $color-5;
 	}
-.sidebar li a:link {
-	color: #988F5E;
-	}
+
 .sidebar li a:visited {
 	color: #B3AE94;
 	}
+
+	.preamble::after {
+		//content: url(CSS_Isometric.svg);
+		//display: block;
+		//margin-left: auto;
+		//margin-right: auto;
+		//max-width: 50vw;
+		content: "";
+		display: block;
+		height: 50vh;
+		//max-width: 10%;
+		background-image: url(CSS_Isometric.svg);
+		background-repeat: no-repeat;
+		padding-bottom: 50%;
+	}
+
+.benefits::before {
+	content: url(CSS_Flatline.svg);
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 50vw;
+}
 
 
 /*.extra1 {
@@ -345,12 +384,13 @@ footer a:link, footer a:visited {
 			}
 			.summary { 
 				margin-top: 0; 
-				}
+				}			
+				
 	}
 
 	@media (min-width:850px) {
 		header h1 { 
-			font-size: 5em;
+			font-size: 7em;
 			padding-left: 20%;
 			padding-top: 0;
 			}
@@ -363,9 +403,67 @@ footer a:link, footer a:visited {
 			position: absolute; 
 			background-color: green;
 		}
+
+		.main{
+			display: grid;
+
+			//grid-template: repeat(6, 40rem) / repeat(2, 1fr);
+			//grid-template: repeat(3, 30rem) 80rem 10rem / repeat(2, 1fr);
+
+			grid-template: repeat(2, 1fr) 0.5fr 2fr 0.2fr / repeat(2, 1fr);
+
+			div:nth-child(1){
+				grid-row-start: 1;
+				grid-row-end: 3;
+				grid-column-start: 1;
+				grid-column-end: 2;
+			}
+
+			div:nth-child(2){
+				grid-row-start: 1;
+				grid-row-end: 3;
+				grid-column-start: 2;
+				grid-column-end: 3;
+			}
+
+			div:nth-child(3){
+				grid-row-start: 3;
+				grid-row-end: 3;
+				grid-column-start: 1;
+				grid-column-end: 3;
+			}
+
+			div:nth-child(4){
+				grid-row-start: 4;
+				grid-row-end: 5;
+				grid-column-start: 1;
+				grid-column-end: 3;
+			}
+
+			footer:first-of-type{
+				grid-row-start: 5;
+				grid-row-end: 6;
+				grid-column-start: 1;
+				grid-column-end: 3;
+			}
+
+			.explanation, .participation{
+				padding: 3em;
+			}
+			
+			.benefits{
+				display: flex;
+				justify-content: space-between;
+	
+				h3{
+					margin: 0.5em;
+				}
+			}
+		}
+
 	}
 
-	@media (min-width:1100px) {
+	@media (min-width:1300px) {
 		header h1 { 
 			font-size: 10em;
 			}
