--- a/style.css
+++ b/style.css
@@ -344,9 +344,6 @@ xButtons
   background-color: #ffe66d;
 }
 
-/*.benefits h3, .benefits p{
-    color: white;
-}*/
 .benefits {
   color: white;
   padding: 20px;
@@ -359,6 +356,11 @@ xButtons
 .requirements p:last-of-type, footer {
   padding: 40px;
   font-size: 2em;
+}
+
+.requirements h3 {
+  color: black;
+  padding: 2em 0 0 2em;
 }
 
 /* basic elements */
@@ -385,7 +387,7 @@ h3 {
   font: italic normal 1.4em georgia, sans-serif;
   letter-spacing: 1px;
   margin-bottom: 0;
-  color: #7D775C;
+  color: #f8f7ff;
   text-decoration: underline dotted;
 }
 
@@ -421,9 +423,6 @@ abbr {
   padding: 20px;
 }
 
-/*.page-wrapper div{ 
-	padding:20px;
-}	*/
 .intro > header:nth-child(1) {
   background: url(CSS_Outline.svg) no-repeat;
   background-size: cover;
@@ -433,13 +432,13 @@ abbr {
 }
 
 header h1 {
-  font-size: 2em;
+  font-size: 2.4em;
   padding-left: 10%;
   padding-top: 180px;
 }
 
 header h2 {
-  font-size: 1em;
+  font-size: 1.1em;
   padding-left: 10%;
   padding-bottom: 35%;
 }
@@ -450,7 +449,7 @@ header {
 }
 
 .summary, .preamble, .supporting, .explanation, .participation, .requirements p {
-  padding: 1em;
+  padding: 0 1em;
 }
 
 .explanation h3 {
@@ -467,7 +466,7 @@ header {
 }
 
 .summary p {
-  font: italic 1.1em/2.2 georgia;
+  font: italic 1.6em/2.2 georgia;
   text-align: center;
 }
 
@@ -510,6 +509,11 @@ footer a:link, footer a:visited {
   justify-content: space-between;
   width: 330px;
   padding: 1em;
+  z-index: 1;
+  -webkit-transition: 3s 0.2s;
+  -moz-transition: 3s 0.2s;
+  -ms-transition: 3s 0.2s;
+  -o-transition: 3s 0.2s;
   transition: 3s 0.2s;
 }
 .sidebar .wrapper div h3 {
@@ -541,22 +545,22 @@ footer a:link, footer a:visited {
   width: 240px;
 }
 
-/*.summary{
-margin-top: 200px;
-}*/
 .sidebar .wrapper div:hover {
   background-color: black;
   margin-right: 10px;
+  z-index: 2;
 }
 .sidebar .wrapper div:hover h3 {
   color: #f8f7ff;
 }
 .sidebar .wrapper div:hover a:link {
-  font-size: 1.3em;
+  font-size: 1.5em;
+  padding: 1.5em 0;
 }
 
 .sidebar h3.select {
   margin: 10px 0 5px 0;
+  padding: 1.5em;
   height: 16px;
   white-space: nowrap;
   overflow: hidden;
@@ -571,6 +575,7 @@ margin-top: 200px;
 
 .sidebar h3.resources {
   margin: 25px 0 5px 0;
+  padding: 1.5em;
   white-space: nowrap;
   overflow: hidden;
 }
@@ -595,53 +600,90 @@ margin-top: 200px;
 }
 
 .preamble::after {
-  content: "";
+  content: url(CSS_Isometric.svg);
   display: block;
-  height: 50vh;
-  background-image: url(CSS_Isometric.svg);
-  background-repeat: no-repeat;
-  padding-bottom: 50%;
+  -webkit-transform: scale(0.3);
+  -moz-transform: scale(0.3);
+  -ms-transform: scale(0.3);
+  -o-transform: scale(0.3);
+  transform: scale(0.3);
+  height: 12em;
 }
 
 .benefits::before {
   content: url(CSS_Flatline.svg);
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 50vw;
+  -webkit-transform: scale(0.3);
+  -moz-transform: scale(0.3);
+  -ms-transform: scale(0.3);
+  -o-transform: scale(0.3);
+  transform: scale(0.3);
+  height: 12em;
 }
 
-/*.extra1 {
-	/*background: transparent url(http://csszengarden.com/001/cr2.gif) top left no-repeat; */
-/*position: absolute; 
-top: 40px; 
-right: 0; 
-width: 148px; 
-height: 110px;
-}*/
-@media (max-width: 330px) {
-  .summary {
-    max-width: 40%;
-  }
+.summary {
+  max-width: 55%;
 }
-@media (max-width: 650px) {
-  .summary {
-    max-width: 55%;
-  }
-}
+
 @media (min-width: 400px) {
+  .sidebar .wrapper div:nth-child(1) {
+    top: 2em;
+  }
+
   header h1 {
-    font-size: 3.5em;
+    font-size: 3.3em;
     padding-top: 0;
+  }
+
+  header h2 {
+    font-size: 1.2em;
   }
 
   .summary {
     margin-top: 0;
+    max-width: 65%;
+  }
+
+  .preamble::after {
+    transform: scale(0.7);
+    height: 20em;
+    text-align: center;
+  }
+
+  .benefits::before {
+    transform: scale(0.7);
+    height: 17em;
+    text-align: center;
+  }
+}
+@media (min-width: 600px) {
+  .summary {
+    max-width: 75%;
+  }
+}
+@media (min-width: 750px) {
+  header h1 {
+    font-size: 5em;
+  }
+
+  header h2 {
+    font-size: 1.7em;
+  }
+
+  .summary {
+    max-width: 100%;
+  }
+
+  .sidebar .wrapper div {
+    background-color: green;
+  }
+  .sidebar .wrapper div h3 {
+    color: #f8f7ff;
   }
 }
 @media (min-width: 850px) {
   header h1 {
-    font-size: 7em;
+    font-size: 6.5em;
     padding-left: 20%;
     padding-top: 0;
   }
@@ -654,12 +696,11 @@ height: 110px;
 
   .sidebar .wrapper div {
     position: absolute;
-    background-color: green;
   }
 
   .main {
     display: grid;
-    grid-template: repeat(2, 1fr) 0.5fr 2fr 0.2fr/repeat(2, 1fr);
+    grid-template: repeat(2, 1fr) 0.5fr 1.6fr 0.2fr/repeat(2, 1fr);
   }
   .main div:nth-child(1) {
     grid-row-start: 1;
@@ -684,6 +725,9 @@ height: 110px;
     grid-row-end: 5;
     grid-column-start: 1;
     grid-column-end: 3;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
   .main footer:first-of-type {
     grid-row-start: 5;
@@ -692,19 +736,59 @@ height: 110px;
     grid-column-end: 3;
   }
   .main .explanation, .main .participation {
+    margin: 2em;
     padding: 3em;
   }
   .main .benefits {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
     display: flex;
+    justify-content: space-between;
+    justify-content: space-between;
     justify-content: space-between;
   }
   .main .benefits h3 {
     margin: 0.5em;
   }
+
+  .preamble::after {
+    -webkit-transform: scale(0.8);
+    -moz-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    -o-transform: scale(0.8);
+    transform: scale(0.8);
+    height: 22em;
+  }
+
+  .benefits::before {
+    -webkit-transform: scale(0.8);
+    -moz-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    -o-transform: scale(0.8);
+    transform: scale(0.8);
+  }
 }
 @media (min-width: 1300px) {
   header h1 {
     font-size: 10em;
+  }
+
+  .preamble::after {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
+  }
+
+  .benefits::before {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+    transform: scale(1);
   }
 }
 
