--- a/style.css
+++ b/style.css
@@ -493,6 +493,10 @@ footer a:link, footer a:visited {
 }
 
 .sidebar .wrapper {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
   display: flex;
   flex-direction: column;
   font: 10px verdana, sans-serif;
@@ -503,6 +507,10 @@ footer a:link, footer a:visited {
   position: absolute;
   background-color: none;
   right: 0;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
   display: flex;
   flex-direction: row;
   margin: 10px 10% 10px;
@@ -532,7 +540,7 @@ footer a:link, footer a:visited {
 }
 
 .sidebar .wrapper div:nth-child(2) {
-  top: 0;
+  top: 3em;
   margin-top: 250px;
   margin-right: -130px;
   width: 230px;
@@ -645,12 +653,20 @@ footer a:link, footer a:visited {
   }
 
   .preamble::after {
+    -webkit-transform: scale(0.7);
+    -moz-transform: scale(0.7);
+    -ms-transform: scale(0.7);
+    -o-transform: scale(0.7);
     transform: scale(0.7);
     height: 20em;
     text-align: center;
   }
 
   .benefits::before {
+    -webkit-transform: scale(0.7);
+    -moz-transform: scale(0.7);
+    -ms-transform: scale(0.7);
+    -o-transform: scale(0.7);
     transform: scale(0.7);
     height: 17em;
     text-align: center;
@@ -658,7 +674,7 @@ footer a:link, footer a:visited {
 }
 @media (min-width: 600px) {
   .summary {
-    max-width: 75%;
+    max-width: 80%;
   }
 }
 @media (min-width: 750px) {
@@ -668,10 +684,6 @@ footer a:link, footer a:visited {
 
   header h2 {
     font-size: 1.7em;
-  }
-
-  .summary {
-    max-width: 100%;
   }
 
   .sidebar .wrapper div {
@@ -696,6 +708,10 @@ footer a:link, footer a:visited {
 
   .sidebar .wrapper div {
     position: absolute;
+  }
+
+  .summary {
+    max-width: 100%;
   }
 
   .main {
@@ -725,6 +741,10 @@ footer a:link, footer a:visited {
     grid-row-end: 5;
     grid-column-start: 1;
     grid-column-end: 3;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -745,8 +765,6 @@ footer a:link, footer a:visited {
     display: -ms-flex;
     display: -o-flex;
     display: flex;
-    justify-content: space-between;
-    justify-content: space-between;
     justify-content: space-between;
   }
   .main .benefits h3 {
