--- a/style.scss
+++ b/style.scss
@@ -13,6 +13,7 @@
 @import 'partials/colors';
 @import 'partials/background';
 @import 'partials/patterns';
+@import 'partials/mixins';
 @import 'partials/navigation';
 @import 'partials/page-title';
 @import 'partials/typography';
@@ -87,13 +88,11 @@ h3 {
 	text-decoration: underline dotted;
 	}
 a:link { 
-	font-weight: bold; 
-	text-decoration: none; 
+	@include link-styles;
 	color: #B7A5DF;
 	}
 a:visited { 
-	font-weight: bold; 
-	text-decoration: none; 
+	@include link-styles; 
 	color: #D4CDDC;
 	}
 a:hover, a:focus, a:active { 
@@ -183,7 +182,7 @@ footer a:link, footer a:visited {
 	}	
 
 .sidebar .wrapper { 
-	display: flex;
+	@include flex-vendor-prefixes;
 	flex-direction: column;
 	font: 10px verdana, sans-serif; 	
 	padding: 10px; 	
@@ -194,7 +193,7 @@ footer a:link, footer a:visited {
 			position: absolute; 
 			background-color: none;
 			right: 0;
-			display: flex;
+			@include flex-vendor-prefixes;
 			flex-direction: row;
 			margin: 10px 10% 10px;
 			justify-content: space-between;
@@ -227,7 +226,7 @@ footer a:link, footer a:visited {
 
 				
 			.sidebar .wrapper div:nth-child(2){ 
-				top: 0;
+				top: 3em;
 				margin-top: 250px;
 				margin-right: -130px;
 				width: 230px; 	
@@ -260,20 +259,17 @@ footer a:link, footer a:visited {
 	margin: 10px 0 5px 0; 
 	padding: 1.5em;
 	height: 16px;
-	white-space: nowrap;
-	overflow: hidden;
+	@include sidebar-heading3-styles;
 	}
 .sidebar h3.archives { 
 	margin: 25px 0 5px 0;
 	height: 14px; 
-	white-space: nowrap;
-	overflow: hidden;
+	@include sidebar-heading3-styles;
 	}
 .sidebar h3.resources {  
 	margin: 25px 0 5px 0; 
 	padding: 1.5em;
-	white-space: nowrap;
-	overflow: hidden;
+	@include sidebar-heading3-styles;
 	}
 
 
@@ -298,22 +294,14 @@ footer a:link, footer a:visited {
 	.preamble::after {
 		content: url(CSS_Isometric.svg);
 		display: block;
-		-webkit-transform: scale(0.3);
-		-moz-transform: scale(0.3);
-		-ms-transform: scale(0.3);
-		-o-transform: scale(0.3);
-		transform: scale(0.3);
+		@include image-scale-03;
 		height: 12em;
 	}
 
 .benefits::before {
 	content: url(CSS_Flatline.svg);
 	display: block;
-	-webkit-transform: scale(0.3);
-	-moz-transform: scale(0.3);
-	-ms-transform: scale(0.3);
-	-o-transform: scale(0.3);
-	transform: scale(0.3);
+	@include image-scale-03;
 	height: 12em;
 }
 
@@ -341,13 +329,13 @@ footer a:link, footer a:visited {
 				max-width: 65%;
 				}			
 		.preamble::after {
-				transform: scale(0.7);
+				@include image-scale-07;
 				height: 20em;
 				text-align: center;
 			}
 			
 		.benefits::before {
-				transform: scale(0.7);
+				@include image-scale-07;
 				height: 17em;
 				text-align: center;
 			}		
@@ -355,7 +343,7 @@ footer a:link, footer a:visited {
 
 	@media (min-width:600px) {
 		.summary { 
-			max-width: 75%;
+			max-width: 80%;
 			}
 	}
 
@@ -366,9 +354,7 @@ footer a:link, footer a:visited {
 		header h2 {
 			font-size: 1.7em;
 			}
-	.summary { 
-		max-width: 100%;
-		}
+	
 		.sidebar .wrapper div{ 
 			background-color: green;
 			h3{
@@ -392,6 +378,9 @@ footer a:link, footer a:visited {
 			position: absolute; 
 			
 		}
+		.summary { 
+			max-width: 100%;
+			}
 
 		.main{
 			display: grid;
@@ -423,7 +412,7 @@ footer a:link, footer a:visited {
 				grid-row-end: 5;
 				grid-column-start: 1;
 				grid-column-end: 3;
-				display: flex;
+				@include flex-vendor-prefixes;
 				flex-direction: column;
 				justify-content: space-between;
 			}
@@ -441,13 +430,7 @@ footer a:link, footer a:visited {
 			}
 			
 			.benefits{				
-				display: -webkit-flex;
-				display: -moz-flex;
-				display: -ms-flex;
-				display: -o-flex;
-				display: flex;
-				justify-content: space-between;
-				justify-content: space-between;
+				@include flex-vendor-prefixes;
 				justify-content: space-between;
 	
 				h3{
@@ -457,20 +440,12 @@ footer a:link, footer a:visited {
 		}
 
 		.preamble::after {
-			-webkit-transform: scale(0.8);
-			-moz-transform: scale(0.8);
-			-ms-transform: scale(0.8);
-			-o-transform: scale(0.8);
-			transform: scale(0.8);
+			@include image-scale-08;
 			height: 22em;
 		}
 		
 	.benefits::before {
-			-webkit-transform: scale(0.8);
-			-moz-transform: scale(0.8);
-			-ms-transform: scale(0.8);
-			-o-transform: scale(0.8);
-			transform: scale(0.8);
+		@include image-scale-08;
 		}
 		
 
@@ -481,18 +456,10 @@ footer a:link, footer a:visited {
 			font-size: 10em;
 			}
 		.preamble::after {
-			-webkit-transform: scale(1);
-			-moz-transform: scale(1);
-			-ms-transform: scale(1);
-			-o-transform: scale(1);
-			transform: scale(1);
+			@include image-scale-1;
 			}
 			
 		.benefits::before {
-			-webkit-transform: scale(1);
-			-moz-transform: scale(1);
-			-ms-transform: scale(1);
-			-o-transform: scale(1);
-			transform: scale(1);
+			@include image-scale-1;
 			}	
 	}
