--- a/style.css
+++ b/style.css
@@ -505,7 +505,7 @@ footer a:link, footer a:visited {
 
 .sidebar .wrapper div {
   position: absolute;
-  background-color: none;
+  background-color: transparent;
   right: 0;
   display: -webkit-flex;
   display: -moz-flex;
